<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOSH</string>
    <string name="action_settings">Settings</string>
    <string name="choose_a_lab">Choose a lab</string>
    <string name="title_activity_workstation">WorkstationActivity</string>
    <string name="choose_a_workstation">Choose a workstation</string>
    <string name="title_activity_hardware">HardwareActivity</string>
    <string name="choose_a_hardware_item">Choose a hardware item</string>
    <string name="title_activity_hardware_detail">HardwareDetailActivity</string>
    <string name="serial_number">Serial number:</string>
    <string name="asu_number">ASU number:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="model_number">Model number:</string>
    <string name="assigned_to">Assigned to:</string>
    <string name="specs">Specs:</string>
    <string name="hardware_type">Hardware type:</string>
    <string name="hardware_status">Hardware status:</string>
    <string name="hardware_status_comment">Hardware status comment:</string>
    <string name="year">Year:</string>
    <string name="title_activity_add_hardware">AddHardwareActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_hardware">Add Hardware</string>
    <string name="type_hint">Enter a number 1-4</string>
    <string name="save">Save</string>

</resources>
