<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddHardwareActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:id="@+id/Table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" >

            <TableRow
                android:id="@+id/TableRow06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_number" />

                <EditText
                    android:id="@+id/serial_number_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asu_number" />

                <EditText
                    android:id="@+id/asu_number_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer" />

                <EditText
                    android:id="@+id/manufacturer_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/TableRow03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model_number" />

                <EditText
                    android:id="@+id/model_number_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assigned_to" />

                <EditText
                    android:id="@+id/assigned_to_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specs" />

                <EditText
                    android:id="@+id/specs_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hardware_type" />

                <EditText
                    android:id="@+id/hardware_type_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_hint"
                    android:inputType="number" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hardware_status" />

                <EditText
                    android:id="@+id/hardware_status_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_hint"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hardware_status_comment" />

                <EditText
                    android:id="@+id/hardware_status_comment_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year" />

                <EditText
                    android:id="@+id/year_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/add_hardware"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Table"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/save" />
    </RelativeLayout>

</ScrollView>